# aight-im

./: .gitignore  Cargo.toml  readme.md
aight-client/: Cargo.toml
aight-client/src/: codec.rs  main.rs
aight-proto/: Cargo.toml  build.rs
aight-proto/src/: codec.rs  lib.rs  msg_types.proto  types.proto  types.rs
aight-server/: Cargo.toml
aight-server/src/: main.rs
src/client/: client.rs
src/server/: server.rs  split.rs
