[package]
name = "aight-proto"
version = "0.1.0"
authors = ["liyuntao <liyuntao58607@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
prost = "0.5.0"

[build-dependencies]
prost-build = "0.5.0"


