[package]
name = "aight-server"
version = "0.1.0"
authors = ["liyuntao <liyuntao58607@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
futures-preview = "0.3.0-alpha.19"
log = "0.4.0"
tokio = "0.2.0-alpha.6"
tokio-io = "0.2.0-alpha.6"